feat: integrate Terraform for Vault configuration in bootstrap
Automate Vault setup with Terraform:
- Add K8s auth setup with Ansible playbook
- Create KV mounts and policies for develop/stage/production
- Setup Kubernetes auth backend with environment roles
- Extend run_command to support cwd and env parameters

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ infra/secrets.local.yaml
 secrets.local.yaml
 .vault-credentials.yml
 infra/.vault-credentials.yml
+.vault-k8s-auth.yml
+infra/.vault-k8s-auth.yml
 *.pem
 *.key
 *.crt
