--- a/infra/secrets.local.yaml.example
+++ b/infra/secrets.local.yaml.example
@@ -6,3 +6,8 @@
 # Vault configuration
 vault:
   replicas: 3
+
+# Keycloak configuration
+keycloak:
+  admin_password: admin123
+  postgresql_password: postgres123
