--- a/infra/ansible/verify-pods.yml
+++ b/infra/ansible/verify-pods.yml
@@ -1,5 +1,5 @@
 ---
-- name: Verify Pods are Running and Ready
+- name: Verify Pods are Ready
   hosts: localhost
   gather_facts: no
   vars:
@@ -9,7 +9,7 @@
     wait_timeout: 300
 
   tasks:
-    - name: Wait for pods to be running and ready
+    - name: Wait for pods to be ready
       kubernetes.core.k8s_info:
         kind: Pod
         namespace: "{{ namespace }}"
@@ -18,9 +18,6 @@
       register: pod_info
       until: >
         pod_info.resources | length > 0 and
-        pod_info.resources |
-        selectattr('status.phase', 'defined') |
-        selectattr('status.phase', 'equalto', 'Running') | list | length == pod_info.resources | length and
         pod_info.resources |
         selectattr('status.conditions', 'defined') |
         map(attribute='status.conditions') | flatten |
@@ -32,5 +29,5 @@
 
     - name: Display pods status
       debug:
-        msg: "{{ pod_info.resources | length }} pod(s) in namespace '{{ namespace }}' are Running and Ready"
+        msg: "{{ pod_info.resources | length }} pod(s) in namespace '{{ namespace }}' are Ready"
       when: pod_info.resources | length > 0
