feat: add Jenkins deployment with Vault-based secrets management
Add complete Jenkins CI/CD infrastructure with centralized secret storage in HashiCorp Vault:

- Jenkins Helm deployment with JCasC configuration
  - Auto-configured admin user and plugin installation
  - Skip setup wizard for automated deployment
  - Persistent storage and resource limits

- Vault integration for secrets management
  - Create vault-token credential in Jenkins for API access
  - Store application secrets (DockerHub, GitHub, SonarCloud) in Vault
  - Store Jenkins admin credentials in Vault
  - Ansible playbook for centralized secret storage

- CI/CD pipeline configuration
  - Complete Jenkinsfile with build, test, security scan stages
  - Docker build and push to registry
  - SonarCloud integration for code quality
  - Vault integration for secret retrieval

- Bootstrap automation
  - Automated Jenkins deployment and configuration
  - Port-forward management for service access
  - Proper secret injection from secrets.local.yaml

--- a/infra/ansible/vault/init.yml
+++ b/infra/ansible/vault/init.yml
@@ -1,6 +1,7 @@
 ---
 - name: Initialize HashiCorp Vault
   hosts: localhost
+  connection: local
   gather_facts: no
   vars:
     vault_namespace: "vault"
