--- a/infra/ansible/vault/setup-k8s-auth.yml
+++ b/infra/ansible/vault/setup-k8s-auth.yml
@@ -1,6 +1,7 @@
 ---
 - name: Setup Kubernetes Auth Prerequisites for Vault
   hosts: localhost
+  connection: local
   gather_facts: no
   vars:
     vault_namespace: "vault"
