--- a/infra/secrets.local.yaml.example
+++ b/infra/secrets.local.yaml.example
@@ -11,8 +11,9 @@ vault:
 jenkins:
   lock_log: false
   admin_password: "changeme"
-  git_repository: "https://github.com/your-org/your-repo.git"
-  git_credentials_id: "github-credentials"
+  git_repository: "https://github.com/your-org/jenkins-library.git"
+  git_library_branch: "main"
+  git_credentials_id: "wmoinar"
   dockerhub_username: "your-dockerhub-username"
   dockerhub_password: "your-dockerhub-token"
   sonarcloud_token: "your-sonarcloud-token"
