--- a/infra/helm/jenkins/values.yaml
+++ b/infra/helm/jenkins/values.yaml
@@ -47,6 +47,7 @@ controller:
     - ansicolor
     - timestamper
     - build-timeout
+    - pipeline-utility-steps
 
   # Skip setup wizard
   installLatestPlugins: true
@@ -81,6 +82,31 @@ controller:
           authorizationStrategy:
             loggedInUsersCanDoAnything:
               allowAnonymousRead: false
+      credentials: |
+        credentials:
+          system:
+            domainCredentials:
+              - credentials:
+                  - usernamePassword:
+                      scope: GLOBAL
+                      id: "${GITHUB_CREDENTIALS_ID}"
+                      username: "${GITHUB_CREDENTIALS_ID}"
+                      password: "${GITHUB_TOKEN}"
+                      description: "GitHub Token - Used for git operations and shared library"
+      shared-library: |
+        unclassified:
+          globalLibraries:
+            libraries:
+              - name: "jenkins-library"
+                retriever:
+                  modernSCM:
+                    scm:
+                      gitSource:
+                        remote: "${GIT_REPOSITORY}"
+                        credentialsId: "${GITHUB_CREDENTIALS_ID}"
+                defaultVersion: "${GIT_LIBRARY_BRANCH}"
+                implicit: false
+                allowVersionOverride: true
 
   # Persistent volume
   persistence:
