feat: full E2E bootstrap with frontend, two microservices, OIDC security and multi-env deployment
Frontend
- Added static frontend (index/login/app pages, CSS/JS) with Nginx and Dockerfile

Services
- Added statistics-api and device-registration-api (Python) with env config and requirements
- Introduced common libraries: Keycloak auth, MongoDB client and health checks
- Added basic models and endpoints; included service-level READMEs

Infrastructure
- Helm charts:
  - common: helpers, deployment/service/serviceaccount/namespace/external-secrets/secretstore
  - microservice: chart with templates + env values (develop/stage/production) for statistics-api, device-registration-api and frontend
  - mongodb-environment: chart with CRDs/RBAC and env values
- Ingress for frontend, Keycloak and Vault
- Ansible playbooks to create Keycloak client and configure MongoDB secrets via Vault
- Updated bootstrap script and local secrets example

CI/CD
- Updated Jenkinsfile
- Added new pipelines (deploy-app) and shared libs (buildDockerImage, deployApp, deployMongoDB, runAnsiblePlaybook, configureKeycloakClient)

Notes
- Introduces OIDC authentication with Keycloak and secret management with Vault
- Enables multi-environment deployments through Helm values

--- a/infra/ansible/vault/setup-k8s-auth.yml
+++ b/infra/ansible/vault/setup-k8s-auth.yml
@@ -78,17 +78,20 @@
         kubernetes_ca_cert_b64: "{{ ca_secret.resources[0].data['ca.crt'] }}"
         kubernetes_host: "{{ k8s_host.stdout }}"
 
-    - name: Save Kubernetes auth configuration
-      copy:
-        content: |
-          ---
-          kubernetes:
-            host: "{{ kubernetes_host }}"
-            ca_cert: "{{ kubernetes_ca_cert_b64 }}"
-            token_reviewer_jwt: "{{ token_reviewer_jwt }}"
-        dest: "{{ output_file }}"
-        mode: '0600'
+    - name: Decode CA cert
+      set_fact:
+        kubernetes_ca_cert: "{{ kubernetes_ca_cert_b64 | b64decode }}"
 
-    - name: Display configuration saved
-      debug:
-        msg: "Kubernetes auth configuration saved to {{ output_file }}"
+    - name: Configure Vault Kubernetes auth
+      uri:
+        url: "http://localhost:8200/v1/auth/kubernetes/config"
+        method: PUT
+        headers:
+          X-Vault-Token: "{{ vault_token }}"
+        body_format: json
+        body:
+          kubernetes_host: "https://kubernetes.default.svc:443"
+          kubernetes_ca_cert: "{{ kubernetes_ca_cert }}"
+          token_reviewer_jwt: "{{ token_reviewer_jwt }}"
+        status_code: 200, 204
+        validate_certs: false
