--- a/infra/secrets.local.yaml.example
+++ b/infra/secrets.local.yaml.example
@@ -7,6 +7,21 @@
 vault:
   replicas: 2
 
+# MongoDB configuration per environment
+mongodb:
+  develop:
+    password: "changeme"
+    username: "app_user"
+    database: "device_registration"
+  stage:
+    password: "changeme"
+    username: "app_user"
+    database: "device_registration"
+  production:
+    password: "changeme"
+    username: "app_user"
+    database: "device_registration"
+
 # Jenkins configuration
 jenkins:
   lock_log: false
@@ -24,8 +39,47 @@ keycloak:
   admin_password: "changeme"
   postgresql_password: "changeme"
   lock_log: true
+  # Single public client for frontend (used across all environments)
+  clients:
+    - client_id: "statistics-frontend"
+      name: "Statistics Frontend Application"
+      description: "Public client for statistics frontend application"
+      public_client: true  # No client_secret required
+      protocol: "openid-connect"
+      standard_flow_enabled: true  # Authorization Code Flow
+      direct_access_grants_enabled: false
+      implicit_flow_enabled: false
+      service_accounts_enabled: false
+      # Web origins per environment (CORS)
+      web_origins:
+        develop:
+          - "http://app.local"
+          - "http://app-dev.local"
+          - "http://app-develop.local"
+          - "http://localhost:8080"
+        stage:
+          - "http://app-staging.local"
+          - "http://app-stage.local"
+          - "https://app-staging.example.com"
+        production:
+          - "https://app.example.com"
+          - "https://www.example.com"
+      # Redirect URIs per environment
+      redirect_uris:
+        develop:
+          - "http://app.local/*"
+          - "http://app-dev.local/*"
+          - "http://app-develop.local/*"
+          - "http://localhost:8080/*"
+        stage:
+          - "http://app-staging.local/*"
+          - "http://app-stage.local/*"
+          - "https://app-staging.example.com/*"
+        production:
+          - "https://app.example.com/*"
+          - "https://www.example.com/*"
   realms:
-    - name: dev
+    - name: develop
       display_name: "Development Environment"
       roles:
         - name: admin
@@ -49,7 +103,7 @@ keycloak:
           enabled: true
           emailVerified: true
           roles: [operator]
-    - name: staging
+    - name: stage
       display_name: "Staging Environment"
       roles:
         - name: admin
@@ -65,7 +119,7 @@ keycloak:
           enabled: true
           emailVerified: true
           roles: [admin]
-    - name: prod
+    - name: production
       display_name: "Production Environment"
       roles:
         - name: admin
@@ -81,3 +135,57 @@ keycloak:
           enabled: true
           emailVerified: true
           roles: [admin]
+
+# Frontend configuration per environment
+frontend:
+  develop:
+    domain: "app.local"
+    alternate_domains:
+      - "app-dev.local"
+      - "app-develop.local"
+    keycloak_url: "http://keycloak.local"
+    keycloak_realm: "develop"
+    keycloak_client_id: "statistics-frontend"
+    api_base_url: "http://statistics-api-dev.local"
+    cors_origins: "http://app.local,http://app-dev.local,http://app-develop.local,http://localhost:8080"
+  stage:
+    domain: "app-staging.local"
+    alternate_domains:
+      - "app-stage.local"
+    keycloak_url: "http://keycloak-staging.local"
+    keycloak_realm: "stage"
+    keycloak_client_id: "statistics-frontend"
+    api_base_url: "http://statistics-api-staging.local"
+    cors_origins: "http://app-staging.local,http://app-stage.local,https://app-staging.example.com"
+  production:
+    domain: "app.example.com"
+    alternate_domains:
+      - "www.example.com"
+    keycloak_url: "https://keycloak.example.com"
+    keycloak_realm: "production"
+    keycloak_client_id: "statistics-frontend"
+    api_base_url: "https://api.example.com"
+    cors_origins: "https://app.example.com,https://www.example.com"
+
+# API configuration per environment (for backend services)
+apis:
+  statistics:
+    develop:
+      domain: "statistics-api-dev.local"
+      cors_origins: "http://app.local,http://app-dev.local,http://app-develop.local,http://localhost:8080"
+    stage:
+      domain: "statistics-api-staging.local"
+      cors_origins: "http://app-staging.local,http://app-stage.local,https://app-staging.example.com"
+    production:
+      domain: "api.example.com"
+      cors_origins: "https://app.example.com,https://www.example.com"
+  device_registration:
+    develop:
+      domain: "device-registration-api-dev.local"
+      cors_origins: "http://app.local,http://app-dev.local,http://app-develop.local,http://localhost:8080"
+    stage:
+      domain: "device-registration-api-staging.local"
+      cors_origins: "http://app-staging.local,http://app-stage.local,https://app-staging.example.com"
+    production:
+      domain: "device-registration-api.example.com"
+      cors_origins: "https://app.example.com,https://www.example.com"
