--- a/infra/ansible/vault/store-secrets.yml
+++ b/infra/ansible/vault/store-secrets.yml
@@ -75,10 +75,28 @@
       delay: 2
       no_log: "{{ lock_log }}"
 
+    - name: Store complete configuration in Vault
+      uri:
+        method: PUT
+        url: "{{ vault_url }}/v1/secret/data/config/complete"
+        body:
+          data:
+            data: "{{ secrets | to_json }}"
+        body_format: json
+        headers:
+          X-Vault-Token: "{{ vault_token }}"
+          X-Vault-Request: "true"
+        validate_certs: false
+      register: vault_config_result
+      retries: 3
+      delay: 2
+      no_log: "{{ lock_log }}"
+
     - name: Display Vault secrets storage summary
       debug:
         msg:
           - "Application secrets stored in Vault successfully"
           - "Vault URL: {{ vault_url }}"
-          - "Secrets stored: dockerhub, sonarcloud{% if github_token != '' %}, github{% endif %}"
+          - "Secrets stored: dockerhub, sonarcloud{% if github_token != '' %}, github{% endif %}, config/complete"
           - "Jenkins pipelines can now access these secrets using the Vault token"
+          - "Complete configuration available at secret/config/complete for loadConfig()"
