--- a/infra/helm/keycloak/ingress.yaml
+++ b/infra/helm/keycloak/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: keycloak
   namespace: keycloak
 spec:
+  ingressClassName: traefik
   rules:
   - host: keycloak.local
     http:
