--- a/infra/helm/jenkins/ingress.yaml
+++ b/infra/helm/jenkins/ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: vault
-  namespace: vault
+  name: jenkins
+  namespace: jenkins
 spec:
   ingressClassName: traefik
   rules:
-  - host: vault.local
+  - host: jenkins.local
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: vault
+            name: jenkins
             port:
-              number: 8200
+              number: 8080
