feat: add Jenkins agent with Ansible and configure executors
- Create custom Jenkins agent Docker image with Ansible, kubectl, and Helm
- Add Ansible playbook to build and push agent image to DockerHub
- Configure 2 executors on Jenkins controller for simple jobs
- Update DeployDevSecOpsApp pipeline to use agent per stage
- Comment out stage and production environment deployments (develop only for now)

--- a/infra/helm/jenkins/values.yaml
+++ b/infra/helm/jenkins/values.yaml
@@ -17,6 +17,9 @@ controller:
   # Jenkins URL
   jenkinsUrl: "http://jenkins.jenkins.svc.cluster.local:8080"
 
+  # Number of executors on the controller (for simple jobs)
+  numExecutors: 2
+
   # Resources
   resources:
     requests:
