--- a/infra/docker/jenkins-agent-ansible/Dockerfile
+++ b/infra/docker/jenkins-agent-ansible/Dockerfile
@@ -1,4 +1,4 @@
-FROM jenkins/inbound-agent:latest-jdk17
+FROM jenkins/inbound-agent:latest-jdk21
 
 USER root
 
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     git \
     sshpass \
+    ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
 # Install kubectl
