fix: frontend authentication and Keycloak client configuration
- Enable direct_access_grants for all Keycloak clients in create-client playbook
- Fix frontend to use correct clientId: statistics-frontend (not statistics-api-develop)
- Implement dynamic URL detection using window.location.origin in auth.js
- Remove CONFIG.frontend.url hardcoded value
- Update secrets.local.yaml.example with correct direct_access_grants setting
- Remove redundant Step 20.5 from bootstrap (jenkins-agent build)
  - Agent image is already built in Step 25 via build-images.yml playbook

Frontend authentication now works correctly with proper client isolation.

--- a/infra/ansible/keycloak/create-client.yml
+++ b/infra/ansible/keycloak/create-client.yml
@@ -53,7 +53,7 @@
         client_authenticator_type: "{{ 'client-secret' if not is_public_client else omit }}"
         public_client: "{{ is_public_client }}"
         standard_flow_enabled: true
-        direct_access_grants_enabled: "{{ false if is_public_client else true }}"
+        direct_access_grants_enabled: true
         service_accounts_enabled: "{{ false if is_public_client else true }}"
         redirect_uris: "{{ client_redirect_uris }}"
         web_origins: "{{ client_web_origins }}"
