--- a/infra/secrets.local.yaml.example
+++ b/infra/secrets.local.yaml.example
@@ -47,7 +47,7 @@ keycloak:
       public_client: true  # No client_secret required
       protocol: "openid-connect"
       standard_flow_enabled: true  # Authorization Code Flow
-      direct_access_grants_enabled: false
+      direct_access_grants_enabled: true  # Required for token exchange
       implicit_flow_enabled: false
       service_accounts_enabled: false
       # Web origins per environment (CORS)
